--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dark.img",
   "version": "1.0.0",
   "description": "d",
-  "main": "index.js",
+  "main": "start.js",
   "scripts": {
     "start": "node start.js"
   },
